Added Tron style ground material and VRHands from oculus sample. These are in import folder (not in source control since grabbed directly from oculus sample project).

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -13,4 +13,17 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/Engine.RendererSettings]
 r.ForwardShading=True
+r.DefaultFeature.AutoExposure=False
+r.DefaultFeature.AntiAliasing=2
+r.DefaultFeature.MotionBlur=True
+r.UsePreExposure=True
+r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=False
+r.DefaultFeature.AmbientOcclusion=True
+r.TemporalAA.Upsampling=True
+r.TextureStreaming=True
+
+[/Script/EngineSettings.GameMapsSettings]
+GlobalDefaultGameMode=/Game/Import/VRHands/Blueprints/VRGameMode.VRGameMode_C
+EditorStartupMap=/Game/Maps/Home.Home
+GameDefaultMap=/Game/Maps/Home.Home
 
