Added common VR character and hands, and added custom material instance for hands.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -23,7 +23,17 @@ r.TemporalAA.Upsampling=True
 r.TextureStreaming=True
 
 [/Script/EngineSettings.GameMapsSettings]
-GlobalDefaultGameMode=/Game/Import/VRHands/Blueprints/VRGameMode.VRGameMode_C
 EditorStartupMap=/Game/Maps/Home.Home
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/Maps/Home.Home
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Game/GameMode/VRGameMode.VRGameMode_C
+GlobalDefaultServerGameMode=None
 
