Added rotating destination marker based on thumbstick input and camera look position.

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -85,6 +85,8 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="RThumbUpCapTouch",Scale=1.000000,Key=OculusTouch_Right_ThumbUp)
 +AxisMappings=(AxisName="RPointCapTouch",Scale=1.000000,Key=OculusTouch_Right_IndexPointing)
 +AxisMappings=(AxisName="RGripAxis",Scale=1.000000,Key=OculusTouch_Right_Grip_Axis)
++AxisMappings=(AxisName="LThumbX",Scale=1.000000,Key=OculusTouch_Left_Thumbstick_X)
++AxisMappings=(AxisName="LThumbY",Scale=1.000000,Key=OculusTouch_Left_Thumbstick_Y)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 -ConsoleKeys=Tilde
 +ConsoleKeys=Tilde
