Updated teleportation to function, no rotation included yet.

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -79,6 +79,8 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
++ActionMappings=(ActionName="LTeleport",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Left_Thumbstick_Touch)
++ActionMappings=(ActionName="RTeleport",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Right_Thumbstick_Touch)
 +AxisMappings=(AxisName="LThumbUpCapTouch",Scale=1.000000,Key=OculusTouch_Left_ThumbUp)
 +AxisMappings=(AxisName="LPointCapTouch",Scale=1.000000,Key=OculusTouch_Left_IndexPointing)
 +AxisMappings=(AxisName="LGripAxis",Scale=1.000000,Key=OculusTouch_Left_Grip_Axis)
@@ -87,6 +89,8 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="RGripAxis",Scale=1.000000,Key=OculusTouch_Right_Grip_Axis)
 +AxisMappings=(AxisName="LThumbX",Scale=1.000000,Key=OculusTouch_Left_Thumbstick_X)
 +AxisMappings=(AxisName="LThumbY",Scale=1.000000,Key=OculusTouch_Left_Thumbstick_Y)
++AxisMappings=(AxisName="RThumbX",Scale=1.000000,Key=OculusTouch_Right_Thumbstick_X)
++AxisMappings=(AxisName="RThumbY",Scale=1.000000,Key=OculusTouch_Right_Thumbstick_Y)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 -ConsoleKeys=Tilde
 +ConsoleKeys=Tilde
