Changed floor to landscape with layers, updated static material to have layers, fixed bug with teleport nav boundaries.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -21,6 +21,7 @@ r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=False
 r.DefaultFeature.AmbientOcclusion=True
 r.TemporalAA.Upsampling=True
 r.TextureStreaming=True
+r.MinScreenRadiusForLights=0.030000
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Maps/Home.Home
