Grabbing successfully picks up objects!

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -79,8 +79,8 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
-+ActionMappings=(ActionName="LTeleport",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Left_Thumbstick_Touch)
-+ActionMappings=(ActionName="RTeleport",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Right_Thumbstick_Touch)
++ActionMappings=(ActionName="GrabLeft",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Left_Grip_Click)
++ActionMappings=(ActionName="GrabRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Right_Grip_Click)
 +AxisMappings=(AxisName="LThumbUpCapTouch",Scale=1.000000,Key=OculusTouch_Left_ThumbUp)
 +AxisMappings=(AxisName="LPointCapTouch",Scale=1.000000,Key=OculusTouch_Left_IndexPointing)
 +AxisMappings=(AxisName="LGripAxis",Scale=1.000000,Key=OculusTouch_Left_Grip_Axis)
